* 2007-08-20 - thorben.betten@open-xchange.com

 - Bugfix #8921: Fixed indexing of mail default folders dependent on spam
   activation
 - Bugfix #8937: Fixed typo by replacing all occurences of "instanciat"
   with "instantiat"
 - Fixed regex to detect uuencoded attachments inside a plaint text message

* 2007-08-17 - marcus.klein@open-xchange.com

 - Bugfix #8934: Switched deleting user folder mapping and inserting admin
   folder mapping.
 - Bugfix #8936: Fixed SQL statement for deleting participants.

* 2007-08-17 - thorben.betten@open-xchange.com

 - More granular thread synchronization in folder and message caches
 - Added field "default_folder" to IMAP folders
 - Bugfix #8926: Avoiding setting IMAP's estimated file size when storing
   message attachments into infostore

* 2007-08-16 - thorben.betten@open-xchange.com

 - Partial bugfix #8885: Avoiding translating IO errors to "instantiation
   failed" errors
 - Partial bugfix #8839: New method added to OXFolderAdminHelper class to
   propagate user modifications throughout folder module
 - Bugfix #8901: Sending correct update informations (action=updates) on
   public folder's permission modification

* 2007-08-15 - ben.pahne@open-xchange.com

 - Bug Fix 8880: It was possible to move contacts into the global
   address book. Fixed this.

* 2007-08-15 - tobias.prinz@open-xchange.com

 - Fixed bug in OldNPropertyDefinition causing NoSuchElementException.
   Preparation for bugfix #8844.
 - Bugfix #8844: Changed mailer to use v2.1 as format for attached
   VCards instead of v3.0, because Outlook 2003 has Problems with escaped
   commas.

* 2007-08-15 - thorben.betten@open-xchange.com

 - Special HTML entities moved to external properties file
 - Enhanced text2html conversion through including more HTML entities
 - Added check for duplicate infostore folder on user creation
 - Fixed usages of MailInterfaceMonitor.numActive
 - Removing unspecified initial ACLs on IMAP folder creation