@@ -5,6 +5,8 @@
  - Bugfix #8937: Fixed typo by replacing all occurences of "instanciat"
    with "instantiat"
  - Fixed regex to detect uuencoded attachments inside a plaint text message
+ - Fixed connection handling in:
+   OXFolderAdminHelper.propagateUserModification()
 
 * 2007-08-17 - marcus.klein@open-xchange.com
 
